--- a/src/components/section/Specialists/Specialists.css
+++ b/src/components/section/Specialists/Specialists.css
@@ -155,6 +155,7 @@
   gap: 0.4rem;
   flex: 1;
   text-align: center;
+  align-items: center;
 }
 
 .service-title {
@@ -183,13 +184,13 @@
   flex-direction: column;
   gap: 0.4rem;
   text-align: left;
-  flex: 1;
+  max-width: max-content;
 }
 
 .service-feature {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   gap: 0.5rem;
   font-size: 0.75rem;
   color: rgba(255, 255, 255, 0.85);
